--- a/_posts/2023-09-22-84.md
+++ b/_posts/2023-09-22-84.md
@@ -5,9 +5,17 @@ date: 2023-09-22 08:00:00 +0200
 description: 
 episode: "84"
 tags: ["Assembler","mySQL","developer","skille","studia","WellArchitectedFramework","aws"]
-spreaker: 
+spreaker: 56878974
 apple: 
 newsletter:  |
+  Hej,
+  Kolejny piątek - a więc kolejny odcinek Patoarchitektów. 
+  
+  Gorącym kartoflem na dzisiaj są umierające skille w IT. Co powinien wiedzieć specjalista, a co może sobie odpuścić. W tej kwestii nasze zdania są podzielone. 
+  
+  Motywem przewodnim jest cytat "Nie musisz być inżynierem, aby zostać kierowcą wyścigowym, ale musisz mieć mechaniczną sympatię.". O co dokładnie chodzi i co to ma wspólnego z IT? 
+  
+  Tego dowiesz się w najnowszym odcinku! Do usłyszenia!
   
 
   ## Posłuchaj odcinka na ⬇️
@@ -20,7 +28,7 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
-Patoarchitekci Short #35: Kolejny piątek - a więc kolejny odcinek Patoarchitektów przed nami. Gorącym kartoflem na dzisiaj są umierające skille w IT. Co powinien wiedzieć specjalista, a co może sobie odpuścić. W tej kwestii nasze zdania są podzielone, więc sporo się dzieje w dzisiejszym odcinku. Na koniec robi się lekko sentymentalnie, bo rozmawiamy o programie studiów i o tym, co z perspektywy praktyków IT, powinno się tam znaleźć, co znacznie ułatwia pracę specjalistom IT. Przesłuchaj od razu!
+Patoarchitekci Short #35: Kolejny piątek - a więc kolejny odcinek Patoarchitektów. Gorącym kartoflem na dzisiaj są umierające skille w IT. Co powinien wiedzieć specjalista, a co może sobie odpuścić. W tej kwestii nasze zdania są podzielone, więc sporo się dzieje w dzisiejszym odcinku. Na koniec robi się lekko sentymentalnie, bo rozmawiamy o programie studiów i o tym, co z perspektywy praktyków IT, powinno się tam znaleźć, co znacznie ułatwia pracę specjalistom IT. Przesłuchaj od razu!
 
 
 Linki i ciekawe znaleziska:
