--- a/_posts/2023-09-15-83.md
+++ b/_posts/2023-09-15-83.md
@@ -37,6 +37,7 @@ Linki i ciekawe znaleziska:
 - [Common design patterns at Stripe - DEV Community](https://dev.to/stripe/common-design-patterns-at-stripe-1hb4)
 - [Domain Modeling Made Functional - Scott Wlaschin](https://click.mlsend.com/link/c/YT0yMjkxNTkyMDIwOTk0NTYxNTkxJmM9aDBlMSZlPTM1MTc2NjE3JmI9MTE5NjE5Nzg4MyZkPWUyaDZ3M3A=.zn4GBfo0iKwOsLeuhoiRRlTWzH1jF-zZWjKJpbNYLMU)
 - [// thinkbeforecoding -&gt; Functional Event Sourcing Decider](https://click.mlsend.com/link/c/YT0yMjkxNTkyMDIwOTk0NTYxNTkxJmM9aDBlMSZlPTM1MTc2NjE3JmI9MTE5NjE5Nzg4NyZkPW40bjZ3MXQ=._OJB6iMcuRnbWvBFstL1UJosIEeCc-pRUeZsZy0DLxM)
+- [Valve New Employee Handbook](https://steamcdn-a.akamaihd.net/apps/valve/Valve_NewEmployeeHandbook.pdf)
 
 ### Transkrypcja
 
@@ -68,7 +69,7 @@ Linki i ciekawe znaleziska:
 
 **Szymon Warda**: Zgadza się, ale zapomniałem o jeszcze jednej rzeczy i Orosz o tym też zapomniał, że po co mamy metryki? Metryki mamy po to, żeby uzyskać, na słowo ładnie angielskie tu pasuje, alignment takie uwspólnienie całej organizacji, że teraz optymalizujemy się na wzrost, więc cele, które robimy, robimy w kontekście tej metryki, żeby ją zmaksymalizować. I to jest potęga metryk. To jest potęga mierzenia na podstawie outcome'ów właśnie, że patrzymy, nie wchodzimy w najmniejszy detal, kto, jak, co pracuje, tylko patrzymy czy jesteśmy, w tym samym kierunku idziemy. I to jest potęga mierzenia na outcome'y właśnie, na wyniki pracy.
 
-**Szymon Warda**: I znowu Orosz jeździ po McKinsey'u, że McKinsey patrzy pod kątem developer productivity, ale źle czyta, bo McKinsey tu miał rację jak najbardziej, bo częściowo to jest z VOUW-a, jak mówiliśmy o w poprzednim odcinku, że McKinsey mówi, żeby mierzyć productivity na poziomie systemowym, zespołowym i indywidualnym. Jeżeli Orosz tam jeździ, że wydajność jest dużo ważniejsza na poziomie zespołowym. Tak, ale McKinsey też to robi. Trzeba te trzy obszary mierzyć. Mamy różne wymiary pracy i mamy różne wymiary tego, jak ludzie współpracują, gdzie wartość dają, tak naprawdę.
+**Szymon Warda**: I znowu Orosz jeździ po McKinsey'u, że McKinsey patrzy pod kątem developer productivity, ale źle czyta, bo McKinsey tu miał rację jak najbardziej, bo częściowo to jest z Valve, jak mówiliśmy w poprzednim odcinku, że McKinsey mówi, żeby mierzyć productivity na poziomie systemowym, zespołowym i indywidualnym. Jeżeli Orosz tam jeździ, że wydajność jest dużo ważniejsza na poziomie zespołowym. Tak, ale McKinsey też to robi. Trzeba te trzy obszary mierzyć. Mamy różne wymiary pracy i mamy różne wymiary tego, jak ludzie współpracują, gdzie wartość dają, tak naprawdę.
 
 **Szymon Warda**: Wiadomo, że team lead będzie bardziej na poziomie zespołowym, będzie bardziej na poziomie kooperacji mierzył, a nie na poziomie kodowania tak naprawdę.
 
@@ -84,7 +85,7 @@ Linki i ciekawe znaleziska:
 
 **Szymon Warda**: Dla mnie, jeżeli chodzi o prototypowanie, w ogóle części biznesowej tworzenie, to jest event storming i potem wybieranie happy patha. I to jest ten obszar, który możemy prototypować, ale potrzebujemy tych kartek, żeby je zrozumieć. Siadanie od razu do kodu jest zbyt optymistyczne, bym powiedział. Chyba, że mam bardzo małą domenę, którą doskonale znamy, to może być inna bajka. Ale te kartki są potrzebne, bym się z tym zgodził.
 
-**Łukasz Kałużny**: Wiesz co? Tak, te kartki są potrzebne, bo całość np. przy prototypowaniu samych podsy , kiedy mamy wyzwania nazwijmy to technologiczne i czegoś nie wiem od strony technologii, to bazgraniem na ścianie tego nie przeskoczymy.
+**Łukasz Kałużny**: Wiesz co? Tak, te kartki są potrzebne, bo całość np. przy prototypowaniu samych podsy, kiedy mamy wyzwania nazwijmy to technologiczne i czegoś nie wiem od strony technologii, to bazgraniem na ścianie tego nie przeskoczymy.
 
 **Szymon Warda**: Ja bym się z tym nie zgodził, ponieważ bazgranie na ścianie dla mnie i to jest potęga i jak i dla mnie jest główny artefakt, bo jego znaczenie jest to, że definiujemy sobie czego my realnie potrzebujemy od danej technologii. Często idziemy, że mamy tutaj kolejkę, mamy cokolwiek, to jedziemy z Kafką. A mieliśmy sytuację nawet w tym, jak doradzamy, że ludzie wchodzili w Kafkę, a okazywało się nagle generalnie, że przykład mają dużo subskrybentów i nie zgadza im się i wychodzą poza limity. Więc to bazgranie technologiczne też jest potrzebne, bo daje wkład w podejmowanie świadomych decyzji, czego wymagamy od tego bloczku technologicznego, że to nie jest tylko generyczne, a wykonamy Kafkę, a wkładamy Rabbita czy cokolwiek innego, tylko nagle wiemy co, gdzie i po co i dlaczego.
 
