--- a/_posts/2023-09-22-84.md
+++ b/_posts/2023-09-22-84.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '#84 Patoarchitekci Short #35'
+title: '#84 Umierające skille?!'
 date: 2023-09-22 08:00:00 +0200
 description: 
 episode: "84"
@@ -16,6 +16,15 @@ newsletter:  |
   Motywem przewodnim jest cytat "Nie musisz być inżynierem, aby zostać kierowcą wyścigowym, ale musisz mieć mechaniczną sympatię.". O co dokładnie chodzi i co to ma wspólnego z IT? 
   
   Tego dowiesz się w najnowszym odcinku! Do usłyszenia!
+  
+  ## Short and sweet
+  Czyli  #nowysezonnowimy. Nowa sekcja w pato - linki wybrane pod kątem odcinka, których nie omówiliśmy w podcaście. Może okażą się przydatne ;) Łapcie!
+  
+  - <https://azure.microsoft.com/en-us/updates/generally-available-sdk-type-bindings-in-azure-functions/>
+  
+  - <https://blog.codingmilitia.com/2023/09/05/observing-dotnet-microservices-with-opentelemetry-logs-traces-metrics>
+  
+  
   
 
   ## Posłuchaj odcinka na ⬇️
