--- a/_posts/2023-09-22-84.md
+++ b/_posts/2023-09-22-84.md
@@ -6,7 +6,7 @@ description:
 episode: "84"
 tags: ["Assembler","mySQL","developer","skille","studia","WellArchitectedFramework","aws"]
 spreaker: 56878974
-apple: 
+apple: umieraj%C4%85ce-skille/id1477067604?i=1000628790371
 newsletter:  |
   Hej,
   Kolejny piątek - a więc kolejny odcinek Patoarchitektów. 
@@ -33,11 +33,11 @@ newsletter:  |
 
   ➡️ [Spotify](https://open.spotify.com/episode/)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/umieraj%C4%85ce-skille/id1477067604?i=1000628790371)
 
   ➡️ [YouTube]()
 ---
-Patoarchitekci Short #35: Kolejny piątek - a więc kolejny odcinek Patoarchitektów. Gorącym kartoflem na dzisiaj są umierające skille w IT. Co powinien wiedzieć specjalista, a co może sobie odpuścić. W tej kwestii nasze zdania są podzielone, więc sporo się dzieje w dzisiejszym odcinku. Na koniec robi się lekko sentymentalnie, bo rozmawiamy o programie studiów i o tym, co z perspektywy praktyków IT, powinno się tam znaleźć, co znacznie ułatwia pracę specjalistom IT. Przesłuchaj od razu!
+Kolejny piątek - a więc kolejny odcinek Patoarchitektów. Gorącym kartoflem na dzisiaj są umierające skille w IT. Co powinien wiedzieć specjalista, a co może sobie odpuścić. W tej kwestii nasze zdania są podzielone, więc sporo się dzieje w dzisiejszym odcinku. Na koniec robi się lekko sentymentalnie, bo rozmawiamy o programie studiów i o tym, co z perspektywy praktyków IT, powinno się tam znaleźć, co znacznie ułatwia pracę specjalistom IT. Przesłuchaj od razu!
 
 
 Linki i ciekawe znaleziska:
