--- a/_posts/2023-09-22-84.md
+++ b/_posts/2023-09-22-84.md
@@ -31,7 +31,7 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/84/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/0jMWdl4RCrgva49CgoQToR)
 
   ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/umieraj%C4%85ce-skille/id1477067604?i=1000628790371)
 
