--- a/_posts/2023-10-06-86.md
+++ b/_posts/2023-10-06-86.md
@@ -35,7 +35,7 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/86/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/1cMyyAqeKWmOlbo0fhO0ts)
 
   ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
 
