--- a/_posts/2023-10-06-86.md
+++ b/_posts/2023-10-06-86.md
@@ -6,7 +6,7 @@ description:
 episode: "86"
 tags: ["Postgres","ai","openai","aws","microsoft","observability","splunk","redis","azure","productivity","metryki"]
 spreaker: 57077751
-apple: 
+apple: patoarchitekci-short-36/id1477067604?i=1000630404587
 newsletter:  |
   Serwus!
   
@@ -37,7 +37,7 @@ newsletter:  |
 
   ➡️ [Spotify](https://open.spotify.com/episode/1cMyyAqeKWmOlbo0fhO0ts)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-36/id1477067604?i=1000630404587)
 
   ➡️ [YouTube]()
 ---
