--- a/_posts/2023-10-27-89.md
+++ b/_posts/2023-10-27-89.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '#89 Patoarchitekci Short #37 czyli Copilot, Hyper Drive w Cloudware i nowości od Grafany!'
+title: '#89 Patoarchitekci Short #37'
 date: 2023-10-27 08:00:00 +0200
 description: 
 episode: "89"
