--- a/_posts/2023-10-27-89.md
+++ b/_posts/2023-10-27-89.md
@@ -12,7 +12,7 @@ newsletter:  |
   
   Dzisiaj mamy dla Ciebie coś wyjątkowego! W najnowszym odcinku Podcastu Patoarchitekci wchodzimy na teren, gdzie aniołki boją się stąpać – finanse i energetyczne apetyty GitHuba i Copilota. Czy to jeszcze biznes i jak się to może spinać finansowo?
   Ale to jeszcze nie koniec atrakcji. Google serwuje nam solidną lekcję na temat disaster recovery. Cilium osiągnęło kolejny etap w CNCF, a my zastanawiamy się, co to oznacza dla przyszłości networking’u w Kubernetes.
-  A w Cloudware pojawia się nowa usługa – Hyper Drive. Czy to nowy hype, który zawojuje rynek, czy jednak kit, który szybko odejdzie w niepamięć? My już mamy swoje zdanie, ale czy zgadzasz się z nami?
+  A w Cloudflare pojawia się nowa usługa – Hyper Drive. Czy to nowy hype, który zawojuje rynek, czy jednak kit, który szybko odejdzie w niepamięć? My już mamy swoje zdanie, ale czy zgadzasz się z nami?
   Na koniec dorzucamy do mixu nowy tool do incident response od Grafany. 
   Nie przegap tego odcinka – włącz Patoarchitektów już teraz!
   
@@ -38,7 +38,7 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
-Przygotujcie się na prawdziwy rollercoaster w dzisiejszym odcinku. Bierzemy pod lupę finanse GitHuba i Copilota – czyżby dopłacali do tego biznesu? Google rzuca światło na disaster recovery, a Cilium świętuje swoje graduation w CNCF. W Cloudware pojawia się Hyper Drive – sprawdzamy czy to w ogóle warte zainteresowania. I na deser – nowy tool do incident response od Grafany. Bądźcie z nami, bo dzisiaj będzie się działo!
+Przygotujcie się na prawdziwy rollercoaster w dzisiejszym odcinku. Bierzemy pod lupę finanse GitHuba i Copilota – czyżby dopłacali do tego biznesu? Google rzuca światło na disaster recovery, a Cilium świętuje swoje graduation w CNCF. W Cloudflare pojawia się Hyper Drive – sprawdzamy czy to w ogóle warte zainteresowania. I na deser – nowy tool do incident response od Grafany. Bądźcie z nami, bo dzisiaj będzie się działo!
 
 
 Linki i ciekawe znaleziska:
