--- a/_posts/2023-10-27-89.md
+++ b/_posts/2023-10-27-89.md
@@ -6,7 +6,7 @@ description:
 episode: "89"
 tags: ["chatgpt","cloudflare","kubernetes","Cilium","cncf","terraform","grafana"]
 spreaker: 57391297
-apple: 
+apple: patoarchitekci-short-37/id1477067604?i=1000632795094
 newsletter:  |
   Serwus! 
   
@@ -34,7 +34,7 @@ newsletter:  |
 
   ➡️ [Spotify](https://open.spotify.com/episode/)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-37/id1477067604?i=1000632795094)
 
   ➡️ [YouTube]()
 ---
