--- a/_posts/2023-10-27-89.md
+++ b/_posts/2023-10-27-89.md
@@ -32,7 +32,7 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/89/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/0NVO9SRUpy66EksYwtRKRP)
 
   ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-37/id1477067604?i=1000632795094)
 
