--- a/_posts/2023-11-03-90.md
+++ b/_posts/2023-11-03-90.md
@@ -6,7 +6,7 @@ description:
 episode: "90"
 tags: ["ai","cloudflare","terraform","aws","mySQL","hcl","bicep","azure","kubernetes","gpu"]
 spreaker: 57481943
-apple: 
+apple: patoarchitekci-short-38/id1477067604?i=1000633563822
 newsletter:  |
   Serwus!
   To ten dzień tygodnia, kiedy w Twoje słuchawki trafia świeżutki odcinek podcastu "Patoarchitekci". Czym zajmiemy się tym razem?
@@ -26,9 +26,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/90/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/6X6dCpHnJ4WD03ES3n39sL)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-38/id1477067604?i=1000633563822)
 
   ➡️ [YouTube]()
 ---
