--- a/_posts/2023-11-10-91.md
+++ b/_posts/2023-11-10-91.md
@@ -6,7 +6,7 @@ description:
 episode: "91"
 tags: ["devops","StateDevOpsreport","google","ai","Technical Capabilities","wydajność","dora","UserCentricity","GoogleCloud"]
 spreaker: 57579327
-apple: 
+apple: 2023-state-of-devops-report/id1477067604?i=1000634348885
 newsletter:  |
   Serwus!
   🚀  Najnowszy odcinek Patoarchitektów już jest dostępny do słuchania tam, gdzie lubisz najbardziej. Tym razem mamy coś specjalnego dla DevOpsów. Zgłębiamy tajemnice najnowszego "State of DevOps Report"!
@@ -22,9 +22,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/91/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/3gCkTEgB7K1kOkDNdVaLU0)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/2023-state-of-devops-report/id1477067604?i=1000634348885)
 
   ➡️ [YouTube]()
 ---
