--- a/_posts/2023-11-03-90.md
+++ b/_posts/2023-11-03-90.md
@@ -19,6 +19,12 @@ newsletter:  |
   
   To zaledwie przedsmak, więcej posłuchasz na swojej ulubionej platformie lub na stronie: <https://patoarchitekci.io/90/>
   
+  ## Short and sweet
+  Czyli co warto poczytać lub obejrzeć, na czego nie zdążyliśmy omówić:
+  
+  - <https://devblogs.microsoft.com/azure-sql/vector-similarity-search-with-azure-sql-database-and-openai/>
+  
+  
   Dobrego tygodnia!
   
 
