--- a/_posts/2023-11-24-93.md
+++ b/_posts/2023-11-24-93.md
@@ -6,7 +6,7 @@ description:
 episode: "93"
 tags: [".netConf","Ignite2023","Ignite","opentelemetry","copilot","llm","ai","openai","MicrosoftMesh","AzureMaia","azure","SecurityAdoptionFramework"]
 spreaker: 57778854
-apple: 
+apple: net-conf-2023-i-ignite-2023/id1477067604?i=1000636394534
 newsletter:  |
   Serwus!
   
@@ -23,9 +23,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/93/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/3U9ThOPP51QVwP0CngC2As)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/net-conf-2023-i-ignite-2023/id1477067604?i=1000636394534)
 
   ➡️ [YouTube]()
 ---
