--- a/_posts/2023-11-24-93.md
+++ b/_posts/2023-11-24-93.md
@@ -36,8 +36,8 @@ Linki i ciekawe znaleziska:
 
 - [Introducing .NET Aspire: Simplifying Cloud-Native Development with .NET 8 - .NET Blog](https://devblogs.microsoft.com/dotnet/introducing-dotnet-aspire-simplifying-cloud-native-development-with-dotnet-8/)
 - [Introducing .NET Aspire: Simplifying Cloud-Native Development with .NET 8 - .NET Blog](https://devblogs.microsoft.com/dotnet/introducing-dotnet-aspire-simplifying-cloud-native-development-with-dotnet-8/)
-- [.NET Conf 2023 highlight day 1](https://didourebai.medium.com/net-conf-2023-highlight-day-1-f489050e9908)
 - [Microsoft Ships .NET 8 -- Visual Studio Magazine](https://visualstudiomagazine.com/articles/2023/11/14/net-8-ga.aspx)
+- [Ignite 2023 Book of News](https://news.microsoft.com/build-2023-book-of-news/)
 
 ### Transkrypcja
 
