--- a/_posts/2023-11-24-93.md
+++ b/_posts/2023-11-24-93.md
@@ -38,6 +38,7 @@ Linki i ciekawe znaleziska:
 - [Introducing .NET Aspire: Simplifying Cloud-Native Development with .NET 8 - .NET Blog](https://devblogs.microsoft.com/dotnet/introducing-dotnet-aspire-simplifying-cloud-native-development-with-dotnet-8/)
 - [Microsoft Ships .NET 8 -- Visual Studio Magazine](https://visualstudiomagazine.com/articles/2023/11/14/net-8-ga.aspx)
 - [Ignite 2023 Book of News](https://news.microsoft.com/build-2023-book-of-news/)
+- [Security Adoption Framework](https://aka.ms/saf)
 
 ### Transkrypcja
 
