--- a/_posts/2023-12-01-94.md
+++ b/_posts/2023-12-01-94.md
@@ -6,7 +6,7 @@ description:
 episode: "94"
 tags: ["hype","llm","openai","chatgpt","Masstransit","Dotnet","github","ai","CubeCon","Okta"]
 spreaker: 57859905
-apple: 
+apple: patoarchitekci-short-39/id1477067604?i=1000637144778
 newsletter:  |
   Serwus!
   
@@ -28,9 +28,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/94/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/2qwWLA2Vw7dGgQEWfHe6LI)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-39/id1477067604?i=1000637144778)
 
   ➡️ [YouTube]()
 ---
