--- a/_posts/2023-12-08-95.md
+++ b/_posts/2023-12-08-95.md
@@ -4,17 +4,29 @@ title: '#95 Short #40'
 date: 2023-12-08 08:00:00 +0200
 description: 
 episode: "95"
-tags: []
+tags: ["copilot","cloud","azure","docker","Dotnet","aspire"]
 spreaker: 57936912
 apple: 
 newsletter:  |
+  Serwus!
+  
+  Ekipa Patoarchitektów znowu w natarciu! 🚀 Przygotuj się na dawkę śmiechu, wiedzy i... trochę technicznej szydery. 😜 Nasz najnowszy odcinek podcastu właśnie wylądował w cyfrowym eterze!
+  🎧 Co tam słychać? Zaczynamy od solidnego roastu .NET i zabawnych historii o odpalaniu jednej aplikacji od drugiej. Tak, nie oszczędzamy nikogo! Ale przecież wiesz, że robimy to z miłości do technologii. 😂
+  Następnie płynnie przechodzimy do czegoś poważniejszego - rozmowy o wydajności zespołów IT. Słuchaj, jak Łukasz wyjaśnia swoją "miłość" do Enterprise Architect, a Szymon przekonuje, że narzędzie CI/CD to nie tylko narzędzie, ale prawie życiowy partner każdego devopsa.
+  🔧 Ale to nie wszystko! Na koniec mamy dla Ciebie zagadkę: czy zdalne środowiska developerskie mają sens? Jakie jest Twoje zdanie? 
+  
+  Chcecie posłuchać? Łap link do strony: <https://patoarchitekci.io/95/> Lub posłuchaj w swojej ulubionej apce! 
+  
+  Do usłyszenia za tydzień!
+  Patoekipa
+  
   
 
   ## Posłuchaj odcinka na ⬇️
 
   ➡️ [WWW](https://patoarchitekci.io/95/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/0sreVmXvXB025NfQxE9O8a)
 
   ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
 
