--- a/_posts/2023-12-08-95.md
+++ b/_posts/2023-12-08-95.md
@@ -47,6 +47,7 @@ Linki i ciekawe znaleziska:
 - [Why are Cloud Development Environments Spiking in Popularity, Now?](https://newsletter.pragmaticengineer.com/p/why-are-cloud-development-environments)
 - [Wait, is cloud bad?](https://newsletter.goodtechthings.com/p/wait-is-cloud-bad)
 - [Companies weigh costs of flying with Copilot 365](https://www.itbrew.com/stories/2023/11/27/companies-weigh-costs-of-flying-with-copilot-365)
+- [A Management Maturity Model for Performance - Infrequently Noted](https://infrequently.org/2022/05/performance-management-maturity/)
 
 ### Transkrypcja
 
