--- a/_posts/2023-12-15-96.md
+++ b/_posts/2023-12-15-96.md
@@ -8,6 +8,19 @@ tags: ["aws","azure","nvidia","github","graviton","aurora","opentelemetry","graf
 spreaker: 58004652
 apple: 
 newsletter:  |
+  Serwus!
+  
+  Nowy odcinek Patoarchitektów już czek na Was na stronie i w ulubionej apce podcastowej!  Obejrzyj od razu -> <https://patoarchitekci.io/96/>
+  
+  Tym razem Łukasz i Szymon zabierają Was w kolejną technologiczną podróż. 
+  💻 Rozmawiamy o tym, jak AWS re:Invent rzuca nowe światło na świat AI, jak Nvidia wyrasta na tech-giganta i dlaczego Kubernetes może być prawdziwym "cepem". 🛠️
+  Ale to nie wszystko - z okazji zbliżającego się setnego odcinka, szykujemy coś specjalnego: meet up w Warszawie 10 stycznia! Będzie to nie tylko okazja do świętowania, ale i do głębszej dyskusji na tematy, które Was pasjonują.
+  
+  📅 Oznaczcie datę i przygotujcie się na wyjątkowe sesje dotyczące IDP, LLM-ów i więcej. Szymon i Łukasz czekają na Wasze pytania i gotowi są na każdą dyskusję - bez filtrów i ograniczeń.
+  
+  Dołącz do nas - nie przegap nowego odcinka najlepszego podcastu w świecie IT: <https://patoarchitekci.io/96/>
+  
+  Do następnego razu!
   
 
   ## Posłuchaj odcinka na ⬇️
@@ -20,10 +33,10 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
-To się podziało! Dzisiaj w podcaście kilka ogłoszeń patoparafialnych, w tym MEETUP! Tak, z okazji setnego odcinak zapraszamy Cię na specjalny meetup. Szczegóły w podcaście i linkach. A to dopiero początek, bo mamy też w zanadrzu otwarte patoszkolenia. Co, jak, gdzie i kiedy? Tego też dowiesz się bezpośrednio z podcastu. Stay tuned i czekaj na kolejne informacje!
+To się podziało! W dzisiejszym odcinku skupiamy się na AWS re:Invent, analizujemy dominację Nvidii w technologii i zadajemy pytanie: czy Kubernetes jest faktycznie 'cepem'? 🤔 
 
-A poza tym - Łukasz i Szymon grillują ostatnią konfę AWS-a. Nie zostawiają suchej nitki na utopijnych, hypowych pomysłach. Ale jest też coś, co przypadło im do gustu. Szymon opowiada o tym, jak 5 godzin spędził na słuchaniu podcastu. Chyba było warto? Hm. 
-
+Mamy też kilka ogłoszeń patoparafialnych. Przygotowujemy się do wielkiego świętowania naszego setnego odcinka w Warszawie.
+A to dopiero początek, bo mamy też w zanadrzu otwarte patoszkolenia. Co, jak, gdzie i kiedy? Tego też dowiesz się bezpośrednio z podcastu. Stay tuned i czekaj na kolejne informacje!
 Chcesz więcej? Posłuchaj nowego odcinka!
 
 
