--- a/_posts/2023-12-15-96.md
+++ b/_posts/2023-12-15-96.md
@@ -42,13 +42,15 @@ Chcesz więcej? Posłuchaj nowego odcinka!
 
 Linki i ciekawe znaleziska:
 
+- [Meetup patoarchitekci.io z okazji 100 odcinka podcastu  ](https://pato100.konfeo.com/pl/groups)
+- [[21.02.2024] Modelowanie danych nie tylko w NoSQL](https://easl.ink/9wfoD)
+- [[22.02.2024] Kubernetes the Hard Way](https://easl.ink/W4UpP)
 - [Top announcements of AWS re:Invent 2023  ](https://aws.amazon.com/blogs/aws/top-announcements-of-aws-reinvent-2023/)
 - [Getting started with new Amazon RDS for Db2  ](https://aws.amazon.com/blogs/aws/getting-started-with-new-amazon-rds-for-db2/)
 - [Vector engine for Amazon OpenSearch Serverless is now available  ](https://aws.amazon.com/blogs/aws/vector-engine-for-amazon-opensearch-serverless-is-now-generally-available/)
 - [Amazon CloudWatch Application Signals for automatic instrumentation of your applications nullpreview)  ](https://aws.amazon.com/blogs/aws/amazon-cloudwatch-application-signals-for-automatic-instrumentation-of-your-applications-preview/)
 - [Agents for Amazon Bedrock is now available with improved control of orchestration and visibility into reasoning  ](https://aws.amazon.com/blogs/aws/agents-for-amazon-bedrock-is-now-available-with-improved-control-of-orchestration-and-visibility-into-reasoning/)
 - [Amazon Q (Preview)](https://aws.amazon.com/q/)
-- [Agents for Amazon Bedrock is now available with improved control of orchestration and visibility into reasoning  ](https://aws.amazon.com/blogs/aws/agents-for-amazon-bedrock-is-now-available-with-improved-control-of-orchestration-and-visibility-into-reasoning/)
 
 ### Transkrypcja
 
