--- a/_posts/2023-12-08-95.md
+++ b/_posts/2023-12-08-95.md
@@ -6,7 +6,7 @@ description:
 episode: "95"
 tags: ["copilot","cloud","azure","docker","Dotnet","aspire"]
 spreaker: 57936912
-apple: 
+apple: short-40/id1477067604?i=1000637905326
 newsletter:  |
   Serwus!
   
@@ -28,7 +28,7 @@ newsletter:  |
 
   ➡️ [Spotify](https://open.spotify.com/episode/0sreVmXvXB025NfQxE9O8a)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-40/id1477067604?i=1000637905326)
 
   ➡️ [YouTube]()
 ---
