--- a/_posts/2023-12-15-96.md
+++ b/_posts/2023-12-15-96.md
@@ -6,7 +6,7 @@ description:
 episode: "96"
 tags: ["aws","azure","nvidia","github","graviton","aurora","opentelemetry","grafana"]
 spreaker: 58004652
-apple: 
+apple: aws-re-invent-2023/id1477067604?i=1000638648674
 newsletter:  |
   Serwus!
   
@@ -27,9 +27,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/96/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/52x14Kiml0xoRtCJup6w34)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/aws-re-invent-2023/id1477067604?i=1000638648674)
 
   ➡️ [YouTube]()
 ---
