--- a/_posts/2023-12-22-97.md
+++ b/_posts/2023-12-22-97.md
@@ -6,7 +6,7 @@ description:
 episode: "97"
 tags: ["GenerativeAI","opentelemetry","kubernetes","GPT4","Blockchain","NoSQL","meetup","konteneryzacja"]
 spreaker: 58082424
-apple: 
+apple: podsumowanie-2023-i-predykcje-na-2024/id1477067604?i=1000639418850
 newsletter:  |
   Serwus!
   Zapnij pasy i przygotuj się na emocje, bo najnowszy odcinek 'Patoarchitektów' to prawdziwa jazda bez trzymanki! 
@@ -27,9 +27,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/97/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/6XZRfSXB2Gf78KdSiVf2dQ)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/podsumowanie-2023-i-predykcje-na-2024/id1477067604?i=1000639418850)
 
   ➡️ [YouTube]()
 ---
