--- a/_posts/2023-12-15-96.md
+++ b/_posts/2023-12-15-96.md
@@ -14,9 +14,17 @@ newsletter:  |
   
   Tym razem Łukasz i Szymon zabierają Was w kolejną technologiczną podróż. 
   💻 Rozmawiamy o tym, jak AWS re:Invent rzuca nowe światło na świat AI, jak Nvidia wyrasta na tech-giganta i dlaczego Kubernetes może być prawdziwym "cepem". 🛠️
-  Ale to nie wszystko - z okazji zbliżającego się setnego odcinka, szykujemy coś specjalnego: meet up w Warszawie 10 stycznia! Będzie to nie tylko okazja do świętowania, ale i do głębszej dyskusji na tematy, które Was pasjonują.
+  Ale to nie wszystko - z okazji zbliżającego się setnego odcinka, szykujemy coś specjalnego: **meet up w Warszawie 10 stycznia! [Tu jest link do zapisu -> LINK](https://pato100.konfeo.com/pl/groups)**. Będzie to nie tylko okazja do świętowania, ale i do głębszej dyskusji na tematy, które Was pasjonują.
   
-  📅 Oznaczcie datę i przygotujcie się na wyjątkowe sesje dotyczące IDP, LLM-ów i więcej. Szymon i Łukasz czekają na Wasze pytania i gotowi są na każdą dyskusję - bez filtrów i ograniczeń.
+  📅 zapisz się od razu, zanim zabraknie miejsc i przygotuj się na wyjątkowe sesje dotyczące IDP, LLM-ów i więcej. Szymon i Łukasz czekają na Wasze pytania i gotowi są na każdą dyskusję - bez filtrów i ograniczeń.
+  
+  Co jeszcze? Organizujemy pierwsze otwarte patoszkolenia online. Na razie zaplanowaliśmy dwie opcje: 
+  
+  **21.02.2024 - [Modelowanie danych nie tylko w NoSQL - LINK](https://app.easycart.pl/checkout/78499600/21-02-2024-modelowanie-danych-nie-tylko-w-nosql)**
+  **22.02.2023 - [Kubernetes the Hard Way - LINK](https://app.easycart.pl/checkout/78499600/22022024-kubernetes-the-hard-way)**
+  
+  Na każdym szkoleniu przewidzieliśmy tylko po 16 miejsc, więc jeśli chcesz się załapać to nie czekaj zbyt długo i zapisz się od razu. 
+  
   
   Dołącz do nas - nie przegap nowego odcinka najlepszego podcastu w świecie IT: <https://patoarchitekci.io/96/>
   
