--- a/_posts/2024-01-12-98.md
+++ b/_posts/2024-01-12-98.md
@@ -4,7 +4,7 @@ title: '#98 Enterprise Architecture z Andrzejem Sobczakiem'
 date: 2024-01-12 08:00:00 +0200
 description: 
 episode: "98"
-tags: ["EnterpriseArchitecture","AndrzejSobczak","architekturakorporacyjna"]
+tags: ["EnterpriseArchitecture","AndrzejSobczak","architekturakorporacyjna",""]
 spreaker: 58262386
 apple: enterprise-architecture-z-andrzejem-sobczakiem/id1477067604?i=1000641396563
 newsletter:  |
@@ -37,7 +37,7 @@ newsletter:  |
 ---
 W dzisiejszym odcinku gościmy Andrzeja Sobczaka – specjalistę z zakresu Enterprise Architecture. Andrzej, doktor habilitowany, profesor w Szkole Głównej Handlowej, łączy wiedzę akademicką z praktycznym doświadczeniem w nowoczesnych technologiach.
 
-Podczas rozmowy z Łukaszem i Szymonem, Andrzej skupia się na kluczowych aspektach takich jak znaczenie modelowania danych, rola Enterprise Architecture w podejmowaniu strategicznych decyzji dotyczących rozwoju systemów i technologii, oraz przyszłe trendy i ewolucja roli architektury w dynamicznie zmieniającym się świecie technologii.
+Podczas rozmowy z Łukaszem i Szymonem, Andrzej skupia się na kluczowych aspektach takich jak znaczenie modelowania, rola Enterprise Architecture w podejmowaniu strategicznych decyzji dotyczących rozwoju systemów i technologii, oraz przyszłe trendy i ewolucja roli architektury w dynamicznie zmieniającym się świecie technologii.
 
 **WAŻNE INFO!!** Zmieniamy termin MeetUp z okazji setnego odcinka Patoarchitektów! Niestety nie znaleźliśmy sali na 10 stycznia, więc spotykamy się online 17 stycznia o 15:00! Link znajdziesz poniżej. 
 
@@ -48,6 +48,7 @@ Linki i ciekawe znaleziska:
 - [[22.02.2024] Kubernetes the Hard Way](https://app.easycart.pl/checkout/78499600/22022024-kubernetes-the-hard-way)
 - [Meetup online z okazji 100. odcinka Pato - 17 stycznia 2024]( https://events.teams.microsoft.com/event/e3c509f6-e713-41d9-a1bb-15a14436b030@7d58da1e-863a-433b-881a-eb613237f681)
 - [Andrzej Sobczak - LinkedIn](https://www.linkedin.com/in/andrzejsobczak/)
+- [HiperWydajne Zespoły IT](https://hiperzespoly.it)
 
 ### Transkrypcja
 
