--- a/_posts/2024-01-19-99.md
+++ b/_posts/2024-01-19-99.md
@@ -6,7 +6,7 @@ description:
 episode: "99"
 tags: ["PerformanceReview","SLI","SLO","DynamoDB","mySQL","ZarządzanieDanymi","patoszkolenia"]
 spreaker: 58341709
-apple: 
+apple: short-41/id1477067604?i=1000642189293
 newsletter:  |
   Serwus!
   
@@ -32,9 +32,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/99/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/1tYLc478XxNWxdqCigcdBD)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-41/id1477067604?i=1000642189293)
 
   ➡️ [YouTube]()
 ---
