--- a/_posts/2024-01-26-100.md
+++ b/_posts/2024-01-26-100.md
@@ -6,7 +6,7 @@ description:
 episode: "100"
 tags: ["kubernetes","azure","aws","gcp","OpenTofu","terraform","kafka","NoSQL","github","Soacelift","cloudflare"]
 spreaker: 58441878
-apple: 
+apple: short-42/id1477067604?i=1000643037157
 newsletter:  |
   Serwus!
   Witamy w 100. odcinku Patoarchitektów – miejsca, gdzie IT nie ma tajemnic! W tym wyjątkowym wydaniu zabieramy Was w podróż po najświeższych trendach w cloud computing, AI, i Kubernetes:
@@ -33,9 +33,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/100/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/0NXVxtIPBfLyVdDm6uPxk1)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-42/id1477067604?i=1000643037157)
 
   ➡️ [YouTube]()
 ---
